# rmathrs-dtypes

./: .gitignore  Cargo.toml  index.html
benches/: benchmarks.rs  dtypes.rs
dev-tools/src/: benchmarks1.rs
examples/: factorial.rs
src/: chain.rs  lib.rs  main.rs
src/common/: mod.rs
src/common/arch/: mod.rs
src/common/arch/generic/: add.rs  digits.rs
src/common/arch/generic/parse/: mod.rs
src/common/arch/generic_16_bit/: mod.rs  ntt.rs  word.rs
src/common/arch/generic_16_bit/decimal/: bytes.rs  mod.rs
src/common/arch/generic_32_bit/: mod.rs  ntt.rs  word.rs
src/common/arch/generic_32_bit/decimal/: bytes.rs  mod.rs
src/common/arch/generic_64_bit/: mod.rs  word.rs
src/common/arch/generic_64_bit/decimal/: bytes.rs  mod.rs
src/common/arch/x86/: add.rs
src/common/arch/x86_64/: add.rs
src/fbig/: add.rs  cmp.rs  fbig.rs  mod.rs  mul.rs  parse.rs  testutils.rs  wasm.rs
src/fbig/parse/: mod.rs
src/ibig/: add.rs  add_ops.rs  assert.rs  bits.rs  buffer.rs  cmp.rs  convert.rs  div_ops.rs  fast_divide.rs  gcd.rs  ibig.rs  log.rs  math.rs  mod.bkp.rs  mod.rs  mul_ops.rs  num_traits.rs  pow.rs  primitive.rs  radix.rs  rand.rs  serde.rs  shift.rs  shift_ops.rs  sign.rs  ubig.rs  wasm.rs
src/ibig/arch/generic/: digits.rs
src/ibig/arch/generic_64_bit/: ntt.rs
src/ibig/div/: divide_conquer.rs  mod.rs  simple.rs
src/ibig/fmt/: digit_writer.rs  mod.rs  non_power_two.rs  power_two.rs
src/ibig/modular/: add.rs  cmp.rs  convert.rs  div.rs  fmt.rs  modulo.rs  modulo_ring.rs  mul.rs  pow.rs
src/ibig/mul/: helpers.rs  karatsuba.rs  mod.rs  ntt.rs  simple.rs  toom_3.rs
src/ibig/parse/: decimal.rs  mod.rs  non_power_two.rs  parsebytes.rs  power_two.rs
src/ibig/shift/: decimal.rs  mod.rs
src/utils/: mod.rs
