[package]
name = "rmathrs-dtypes"
version = "0.0.1"
authors = ["Tomek Czajka <tczajka@gmail.com>", "rushike <rushike.ab1@gmail.com>"]
edition = "2021"
description = "A big integer library with good performance"
keywords = ["bigint", "bignum", "mathematics", "modular", "modulo"]
categories = ["mathematics", "no-std"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["generate_coverage.sh"]



[features]
default = ["std", "rand", "num-traits"]

# Interface with the std library.
std = []

[dependencies.cfg-if]
version = "1.0.0"

[dependencies.static_assertions]
version = "1.1"

[dependencies.num-traits]
optional = true
version = "0.2"
default-features = false

[dependencies.rand]
optional = true
version = "0.8.3"
default-features = false

[dependencies.serde]
optional = true
version = "1.0"
default-features = false
features = ["derive"]

[dev-dependencies.criterion]
version = "0.3.4"
features = ["html_reports"]

[dev-dependencies.rand]
version = "0.8.3"

[dev-dependencies.serde_test]
version = "1.0.130"


