[package]
name = "rmathrs-dtypes"
version = "0.0.1"
authors = ["Tomek Czajka <tczajka@gmail.com>", "rushike <rushike.ab1@gmail.com>"]
edition = "2021"
description = "A big integer library with good performance"
keywords = ["bigint", "bignum", "mathematics", "modular", "modulo"]
categories = ["mathematics", "no-std"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["generate_coverage.sh"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
num-traits = "0.2"
regex = "1"
lazy_static = "1.4"

[dependencies.cfg-if]
version = "1.0.0"

[dependencies.static_assertions]
version = "1.1"

[dependencies.rand]
optional = true
version = "0.8.3"
default-features = false

[dependencies.serde]
optional = true
version = "1.0.130"
default-features = false
features = ["derive"]


[dev-dependencies.rand]
version = "0.8.3"

